crates/reinhardt-core/crates/macros/tests/ui/admin/fail/missing_name.stderr
error: `name` attribute is required for model admin

         = help: add `name = "ModelName"` to specify the model name
  --> tests/ui/admin/fail/missing_name.rs:16:9
   |
16 | #[admin(model, for = User)]
   |         ^^^^^
